--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -3,11 +3,12 @@
 name: Example Developer
 
 #RRD DB Loc/Name
-rrddb: "/usr/local/wun/wundergrounddata.rrd"
+rrddb: "/var/www/html/wundergrounddata.rrd"
 csvdatafile: "/usr/local/wun/weatherdata.csv"
 
 graph-location: "/var/www/html/wun/"
 
+photo-location:"/var/www/html/camera/"
 
 use-wun: true
 wun-url: "http://api.wunderground.com/api/<api_key>/conditions/q/zmw:<zmw>.json"
