--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -1,20 +1,23 @@
 ---
-# An employee record
-name: Example Developer
+# Station ID
+name: Weather Station
+soiltemp:
+  use: True
+  #w1thermsensor assumes pin #4
 
-- soiltemp:
-    use: True
-    #w1thermsensor assumes pin #4
-
-- bmp183:
+bmp183:
+  use: True
+  pin-sck: 11
+  pin-sdo: 15
+  pin-sdi: 16
+  pin-cs: 13
 
 #RRD DB Loc/Name
-rrddb: "/var/www/html/wundergrounddata.rrd"
-csvdatafile: "/usr/local/wun/weatherdata.csv"
-
-graph-location: "/var/www/html/wun/"
-
-photo-location: "/var/www/html/camera/"
+file-locations:
+- rrddb: "/var/www/html/wundergrounddata.rrd"
+- csvdatafile: "/usr/local/wun/weatherdata.csv"
+- graph-location: "/var/www/html/wun/"
+- photo-location: "/var/www/html/camera/"
 
 #use-wun: true
 #wun-url: "http://api.wunderground.com/api/<api_key>/conditions/q/zmw:<zmw>.json"
