Initial DB setup and test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,9 @@ linting:
 
 database-building:
   script:
-    - curl -L https://github.com/docker/compose/releases/download/1.18.0/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
-    - chmod 755 /usr/local/bin/docker-compose
+    #- curl -L https://github.com/docker/compose/releases/download/1.18.0/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
+    #- chmod 755 /usr/local/bin/docker-compose
     - cd storage/postgres
-    - /usr/local/bin/docker-compose build
+    - docker build -t weatherstation_psql .
+    #- /usr/local/bin/docker-compose build
+    - docker run --name weatherstation_psql_running -p 5432:5432 weatherstation_psql
