--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ linting:
 
 database-building:
   script:
+    - curl -sSL https://get.docker.com/ | sh
     #- curl -L https://github.com/docker/compose/releases/download/1.18.0/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
     #- chmod 755 /usr/local/bin/docker-compose
     - cd storage/postgres
