--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,16 +11,15 @@ services:
 before_script:
   - docker info
 
-build:
-  stage: build
-  script:
-    - cd storage/postgres
-    - docker build -t my-docker-image .
-    - docker run my-docker-image /script/to/run/tests
-
-
 linting:
   image: python:latest
   script:
     - pip3 install flake8
     - flake8 .
+
+build:
+  stage: build
+  script:
+    - cd storage/postgres
+    - docker build -t weatherstation_psql .
+    - docker run --name weatherstation_psql_running -p 5432:5432 weatherstation_psql
