--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: docker:latest
 
 stages:
   - linting
-  - build
+  - unittesting
 # When using dind, it's wise to use the overlayfs driver for
 # improved performance.
 variables:
