--- a/storage/postgres/docker-compose.yml
+++ b/storage/postgres/docker-compose.yml
@@ -4,7 +4,7 @@ services:
    postgres:
     image: postgres:latest
     environment:
-      POSTGRES_PASSWORD: qwertyuiop
+      POSTGRES_PASSWORD: weatherstation
     ports:
       - "5432:5432"
     container_name: weatherstation-postgres
