Adding unittest to pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ linting:
     - flake8 .
 
 unittesting:
-  stage: test
+  stage: unittesting
   image: python:latest
   script:
     - pip3 install pyyaml
