Adding in python modules to pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,5 +29,6 @@ unittesting:
   script:
     - pip3 install pyyaml
     - pip3 install RPi.GPIO
+    - pip3 install structlog
     - cd station-code
     - python3 test_collectweather.py -v
