--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,5 +31,9 @@ unittesting:
     - pip3 install RPi.GPIO
     - pip3 install structlog
     - pip3 install numpy
+    - apt-get install git
+    - git clone https://github.com/PrzemoF/bmp183.git
+    - git clone git://gist.github.com/3151375.git
+    - git clone https://github.com/adafruit/Adafruit_Python_DHT.git
     - cd station-code
     - python3 test_collectweather.py -v
