--- a/station-code/config.yaml
+++ b/station-code/config.yaml
@@ -5,9 +5,40 @@ soiltemp:
   use: True
   #w1thermsensor assumes pin #4
 
+dht11:
+  use: True
+  data-pin: 5
+
+air1:
+  use: True
+  analog-ch: 0
+
+air2:
+  use: True
+  analog-ch: 1
+
+soilmoisture:
+  use: True
+  analog-ch: 2
+
+winddir:
+  use: True
+  analog-ch: 3
+
+lightresistor:
+  use: True
+  analog-ch: 4
+
 bmp183:
   use: True
   pin-sck: 11
   pin-sdo: 15
   pin-sdi: 16
   pin-cs: 13
+
+mcp3008:
+  use: true
+  pin-clk: 18
+  pin-miso: 23
+  pin-mosi: 24
+  pin-cs: 25
