updated the readme, did a little cleanup, tried to add more details and info where appropriate.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,8 @@ unittesting:
   image: python:latest
   script:
     #- cd docker
-    #- docker build -t gitlab.sigint.cxm:4567/lab-projects/raspberry-pi-weatherstation .
-    #- docker push gitlab.sigint.cxm:4567/lab-projects/raspberry-pi-weatherstation
+    #- docker build -t gitlab:4567/lab-projects/raspberry-pi-weatherstation .
+    #- docker push gitlab:4567/lab-projects/raspberry-pi-weatherstation
     - pip3 install pyyaml
     - pip3 install RPi.GPIO
     - pip3 install structlog
